# helios

./: .gitignore  Makefile  Makefile.in  README.md  config.h.in  configure  configure.ac
include/: activations.h  neuralnet.h  threadpool.h
src/: Makefile.am  Makefile.in  activations.c  helios.c  neuralnet.c  threadpool.c
tests/: .gitignore  Makefile.am  Makefile.in  check_helios  check_helios.c  check_neuralnet.c  check_threadpool.c
tests/.deps/: check_helios-check_helios.Po
tests/.libs/: check_helios
